# python_bazel_template

./: .bazelrc  .gitignore  .prettierrc  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  eject.sh  gazelle-dbglog.md  gazelle_python.yaml  go.mod  lint.sh  package.json  pyproject.toml  requirements.in  requirements.txt  requirements_lock.txt
project/: BUILD  main.py  main_test.py
project/golang-example/: BUILD  main.go  main_test.go
project/test/: main_test.py
tools/: BUILD
tools/black/: BUILD  main.py
tools/buildifier/: BUILD
tools/buildozer/: BUILD
tools/flake8/: BUILD  main.py
tools/ipython/: BUILD  main.py
tools/isort/: BUILD  main.py
tools/jupyter/: BUILD  main.py
tools/prettier/: BUILD
tools/rules/golang/: defs.bzl
tools/rules/python/: BUILD  defs.bzl  test_runner.py
